Resize and fix project image issues on mobile

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -11,7 +11,7 @@
   }
 
   .project-text {
-    color: #333D51;
+    color: #333d51;
     font-size: 1em;
   }
 
@@ -19,18 +19,25 @@
     transform: scale(1.1);
   }
 
+  .project-image {
+    border-radius: 10%;
+    transition: all 1s;
+    min-width: 200px;
+  }
+
+  
 }
 
 @media (max-width: 767.98px) {
-  header{
+  header {
     height: 50px;
   }
 
   #header-title {
     padding-top: 8px;
-    padding-left: 0px;
+    padding-left: 0;
   }
-  
+
   #link-header-desktop {
     display: none;
   }
@@ -55,11 +62,10 @@
     text-decoration: none;
     color: whitesmoke;
   }
-  
+
   #hide-img-skills {
     display: none;
   }
-
 }
 
 @media (max-width: 991.98px) {
@@ -85,16 +91,9 @@
     flex-flow: column;
   }
 
-  .project-image {
-    padding-top: 15px;
-    max-width: 350px;
-  }
-
   .text-project-div {
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
-
- 
 }
 
 @media (max-width: 1199.98px) {
@@ -109,17 +108,14 @@
   }
 
   .features-text {
-    max-width: 300px%;
+    max-width: 300px;
   }
 }
 
 
 /* media with min */
 
-
-
 @media (min-width: 768px) {
-
   #header-link-mail {
     display: none;
   }
@@ -162,7 +158,7 @@
 
 @media (min-width: 1450px) {
   main {
-  padding-top: 150px;
+    padding-top: 150px;
   }
 
   #header-link-mail {
@@ -184,7 +180,7 @@
     font-size: 4rem;
   }
 
-  .features-text { 
+  .features-text {
     max-width: 800px;
   }
 
@@ -199,10 +195,4 @@
   .project-title {
     font-size: 3rem;
   }
-
-  
-
-  
-
-  
 }
